Segundo commit: Trabajando el css del textarea_1

--- a/index.htm
+++ b/index.htm
@@ -17,14 +17,14 @@
 
     <main class="contenedor">
         <section>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+            <textarea class="textarea_1" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
             <div>
                 <h6>Solo letras minúsculas y sin acentos</h6>
             </div>
 
             <div>
-                <button>Encriptar</button>
-                <button>Desencriptar</button>
+                <button class="">Encriptar</button>
+                <button class="">Desencriptar</button>
             </div>
         </section>
 
@@ -37,7 +37,9 @@
     </main>
 
     <footer>
-
+        <div>
+            <p>Todos los derechos reservados - Juan Andrés Marín Mella</p>
+        </div>
     </footer>
 </body>
 </html>
