Tercer commit: Trabajando botones

--- a/index.htm
+++ b/index.htm
@@ -15,30 +15,38 @@
         <img class="logo" src="./img/Logo.svg" alt="Logo de Alura">
     </header>
 
-    <main class="contenedor">
+    <main>
         <section>
             <textarea class="textarea_1" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
-            <div>
+            <div class="aviso">
+                <img src="./img/aviso.svg" alt="Imagen de aviso">
                 <h6>Solo letras minúsculas y sin acentos</h6>
             </div>
 
-            <div>
-                <button class="">Encriptar</button>
-                <button class="">Desencriptar</button>
+            <div class="botones">
+                <button class="btn-encriptar">Encriptar</button>
+                <button class="btn-desencriptar">Desencriptar</button>
             </div>
         </section>
 
         <section>
-            <textarea name="" id="" cols="20" rows="10"></textarea>
+            <textarea class="textarea_2" id="" cols="20" rows="10" readonly></textarea>
             <div>
-                <button>Copiar</button>
+                <button class="btn-copiar">Copiar</button>
             </div>
         </section>
     </main>
 
     <footer>
+        <hr>
         <div>
             <p>Todos los derechos reservados - Juan Andrés Marín Mella</p>
+                <a href="">
+                    <img src="./img/linkedin.svg" alt="Logo linkedin">
+                </a>
+                <a href="">
+                    <img src="./img/github.svg" alt="Logo Github">
+                </a>
         </div>
     </footer>
 </body>
